CloudFormationTemplateOpenShift.yaml
AWSTemplateFormatVersion: '2010-09-09'
Metadata: {}

Parameters:
###########
  KeyName:
    Description: The EC2 Key Pair to allow SSH access to the instance
    Type: 'AWS::EC2::KeyPair::KeyName'
  AvailabilityZone1:
    Description: Availability zone to deploy
    Type: AWS::EC2::AvailabilityZone::Name
  AvailabilityZone2:
    Description: Availability zone to deploy
    Type: AWS::EC2::AvailabilityZone::Name

Mappings:
#########
  RegionMap:
    us-east-1:
      CentOS7: "ami-ae7bfdb8"
    us-east-2:
      CentOS7: "ami-9cbf9bf9"

Resources:
##########
  openshiftvpc:
    Type: "AWS::EC2::VPC"
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: openshift-cf-vpc

  internetgatewayos:
    Type: AWS::EC2::InternetGateway

  gatewayattachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref internetgatewayos
      VpcId: !Ref openshiftvpc

  subnet1:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref openshiftvpc
      CidrBlock: 10.0.1.0/24
      AvailabilityZone: !Ref AvailabilityZone1

  routetable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref openshiftvpc

  subnetroutetableasoc1:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
     RouteTableId: !Ref routetable
     SubnetId: !Ref subnet1

  route:
    Type: "AWS::EC2::Route"
    Properties:
      RouteTableId: !Ref routetable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref internetgatewayos

  subnet2:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref openshiftvpc
      CidrBlock: 10.0.2.0/24
      AvailabilityZone: !Ref AvailabilityZone2

  subnetroutetableasoc2:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
     RouteTableId: !Ref routetable
     SubnetId: !Ref subnet2

  openshiftmaster:
    Type: 'AWS::EC2::Instance'
    Properties:
      Tags:
      - Key: Name
        Value: openshift-master
      InstanceType: t2.medium
      KeyName: !Ref KeyName
      AvailabilityZone: !Ref AvailabilityZone1
      NetworkInterfaces:
        - AssociatePublicIpAddress: "true"
          DeviceIndex: "0"
          SubnetId: !Ref subnet1
          GroupSet:
             - !Ref mastersecgroup
      ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", CentOS7]

  openshiftworker1:
    Type: 'AWS::EC2::Instance'
    Properties:
      Tags:
      - Key: Name
        Value: openshift-worker1
      InstanceType: t2.medium
      KeyName: !Ref KeyName
      AvailabilityZone: !Ref AvailabilityZone1
      NetworkInterfaces:
        - AssociatePublicIpAddress: "true"
          DeviceIndex: "0"
          SubnetId: !Ref subnet1
          GroupSet:
             - !Ref workersecgroup
      ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", CentOS7]

  openshiftworker2:
    Type: 'AWS::EC2::Instance'
    Properties:
      Tags:
      - Key: Name
        Value: openshift-worker2
      InstanceType: t2.medium
      KeyName: !Ref KeyName
      AvailabilityZone: !Ref AvailabilityZone2
      NetworkInterfaces:
        - AssociatePublicIpAddress: "true"
          DeviceIndex: "0"
          SubnetId: !Ref subnet2
          GroupSet:
           - !Ref workersecgroup
      ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", CentOS7]

  openshiftworker3:
    Type: 'AWS::EC2::Instance'
    Properties:
      Tags:
      - Key: Name
        Value: openshift-worker3
      InstanceType: t2.medium
      KeyName: !Ref KeyName
      AvailabilityZone: !Ref AvailabilityZone1
      NetworkInterfaces:
        - AssociatePublicIpAddress: "true"
          DeviceIndex: "0"
          SubnetId: !Ref subnet1
          GroupSet:
           - !Ref workersecgroup
      ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", CentOS7]

  volume1:
    Type: 'AWS::EC2::Volume'
    Properties:
      AvailabilityZone: !GetAtt openshiftmaster.AvailabilityZone
      Size: 50
    DeletionPolicy: Delete

  volat1:
    Type: AWS::EC2::VolumeAttachment
    Properties:
      Device: '/dev/xvdb'
      VolumeId: !Ref volume1
      InstanceId: !Ref openshiftmaster

  volume2:
    Type: 'AWS::EC2::Volume'
    Properties:
      AvailabilityZone: !GetAtt openshiftworker1.AvailabilityZone
      Size: 50
    DeletionPolicy: Delete

  volat2:
    Type: AWS::EC2::VolumeAttachment
    Properties:
      Device: '/dev/xvdb'
      VolumeId: !Ref volume2
      InstanceId: !Ref openshiftworker1

  volume3:
    Type: 'AWS::EC2::Volume'
    Properties:
      AvailabilityZone: !GetAtt openshiftworker2.AvailabilityZone
      Size: 50
    DeletionPolicy: Delete

  volat3:
    Type: AWS::EC2::VolumeAttachment
    Properties:
      Device: '/dev/xvdb'
      VolumeId: !Ref volume3
      InstanceId: !Ref openshiftworker2

  volume4:
    Type: 'AWS::EC2::Volume'
    Properties:
      AvailabilityZone: !GetAtt openshiftworker3.AvailabilityZone
      Size: 50
    DeletionPolicy: Delete

  volat4:
    Type: AWS::EC2::VolumeAttachment
    Properties:
      Device: '/dev/xvdb'
      VolumeId: !Ref volume4
      InstanceId: !Ref openshiftworker3

  workersecgroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref openshiftvpc
      GroupDescription: Security group for the worker Kubernetes nodes
      SecurityGroupIngress:
      - IpProtocol: -1
        FromPort: -1
        ToPort: -1
        CidrIp: 10.0.0.0/16
      - IpProtocol: tcp
        FromPort: '22'
        ToPort: '22'
        CidrIp: 0.0.0.0/0

  mastersecgroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref openshiftvpc
      GroupDescription: Security group for the master Kubernetes node
      SecurityGroupIngress:
      - IpProtocol: -1
        FromPort: -1
        ToPort: -1
        CidrIp: 10.0.0.0/16
      - IpProtocol: tcp
        FromPort: '22'
        ToPort: '22'
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: '8443'
        ToPort: '8443'
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: '10250'
        ToPort: '10250'
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: '30001'
        ToPort: '30001'
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: '30002'
        ToPort: '30002'
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: '30003'
        ToPort: '30003'
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: '30004'
        ToPort: '30004'
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: '31001'
        ToPort: '31001'
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: '31002'
        ToPort: '31002'
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: '31003'
        ToPort: '31003'
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: '31004'
        ToPort: '31004'
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: '80'
        ToPort: '80'
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: '443'
        ToPort: '443'
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: '30500'
        ToPort: '30500'
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: '31111'
        ToPort: '31111'
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: '32222'
        ToPort: '32222'
        CidrIp: 0.0.0.0/0

  elb_classic_lb:
    name: "openshift-lab-mvp"
    state: present
    instance_ids: !Ref openshiftmaster
    subnets:
      - !Ref subnet1
      - !Ref subnet2
    zones:
      - !Ref AvailabilityZone1
      - !Ref AvailabilityZone2
    listeners:
      - protocol: tcp # options are http, https, ssl, tcp
        load_balancer_port: 80
        instance_port: 31111
        # proxy_protocol: True
      - protocol: tcp
        load_balancer_port: 443
        instance_port: 32222
    health_check:
        ping_protocol: https # options are http, https, ssl, tcp
        ping_port: 30500
        ping_path: "/healthz" # not required for tcp or ssl
        response_timeout: 5 # seconds
        interval: 30 # seconds
        unhealthy_threshold: 2
        healthy_threshold: 10
  delegate_to: localhost
